pruebas tags formato y character entitites

--- a/index.html
+++ b/index.html
@@ -8,5 +8,31 @@
 <body>
     <h1 style="color: blueviolet;">HTML AND CSS</h1>
     <img src="assets\florestransparentes.png" alt="">
+    <p>Lorem ipsum dolor sit amet.</p>
+    <p>bold text <b>NEGRITA</b></p>
+    <p>important text <strong>NEGRITA PARA CIEGOS</strong></p>
+    <p>italic text <i>CURSIVA</i></p>
+    <P>emphasized <em>CURSIVA PARA CIEGOS</em></P>
+    <P>marked text <mark>FOSFI</mark></P>
+    <p>smaller text <small>TEXTO MÁS PEQUEÑO</small></p>
+    <P>deleted text <del>TACHADO</del></P>
+    <p>inserted text <ins>SUBRAYADO</ins></p>
+    <p>subscript text base<sub>INDICE</sub></p>
+    <p>superscript text base<sup>POTENCIA</sup></p>
+
+    <h2> PRUEBAS CHARACTER ENTITIES</h2>
+    <p>en este párrafo hay espacios pero no los ves:                         a la izquierda no hay nada<br>
+        en este parrafo si se ven los espacios: &nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; están a la izquierda <br>
+        si quiero escribir un ampersand de verdad tengo que poner eso &amp;    <br>
+        esto &quot;&amp;quot;&quot;  sirve para poner comillas                     <br>
+        esto se utiliza para poner cualquier caracter ascii, en este caso comilla simple &#39;              <br>
+        simbolo del yen &yen; <br>
+        simbolo del euro &euro; <br>
+        simbolo copyright &copy;
+
+
+    </p> 
+
+
 </body>
 </html>
